--- a/src/content/docs/extensions/aoi.music/index.mdx
+++ b/src/content/docs/extensions/aoi.music/index.mdx
@@ -99,5 +99,6 @@ voice.addPlugin(
   }),
 );
 
-voice.bindExecutor(bot.functionManager.interpreter); // needed for events
+voice.bindExecutor(bot.functionManager.interpreter); // needed for events if needed
+
 ```
